--- a/src/app/customers/customer.component.html
+++ b/src/app/customers/customer.component.html
@@ -5,8 +5,9 @@
 
   <div class="card-body">
     <form novalidate
-          (ngSubmit)="save(signupForm)"
-          #signupForm="ngForm">
+          (ngSubmit)="save()"
+          [formGroup]="customerForm"
+    >
 
       <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label"
@@ -16,17 +17,13 @@
                  id="firstNameId"
                  type="text"
                  placeholder="First Name (required)"
-                 required
-                 minlength="3"
-                 [(ngModel)]=customer.firstName
-                 name="firstName"
-                 #firstNameVar="ngModel"
-                 [ngClass]="{'is-invalid': (firstNameVar.touched || firstNameVar.dirty) && !firstNameVar.valid }" />
+                 formControlName="firstName"
+                 [ngClass]="{'is-invalid': (customerForm.get('firstName').touched || customerForm.get('firstName').dirty) && !customerForm.get('firstName').valid }" />
           <span class="invalid-feedback">
-            <span *ngIf="firstNameVar.errors?.required">
+            <span *ngIf="customerForm.get('firstName').errors?.required">
               Please enter your first name.
             </span>
-            <span *ngIf="firstNameVar.errors?.minlength">
+            <span *ngIf="customerForm.get('firstName').errors?.minlength">
               The first name must be longer than 3 characters.
             </span>
           </span>
@@ -41,63 +38,135 @@
                  id="lastNameId"
                  type="text"
                  placeholder="Last Name (required)"
-                 required
-                 maxlength="50"
-                 [(ngModel)]="customer.lastName"
-                 name="lastName"
-                 #lastNameVar="ngModel"
-                 [ngClass]="{'is-invalid': (lastNameVar.touched || lastNameVar.dirty) && !lastNameVar.valid }" />
+                 formControlName="lastName"
+                 [ngClass]="{'is-invalid': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }" />
           <span class="invalid-feedback">
-            <span *ngIf="lastNameVar.errors?.required">
+            <span *ngIf="customerForm.get('lastName').errors?.required">
               Please enter your last name.
             </span>
-            <span *ngIf="lastNameVar.errors?.maxlength">
+            <span *ngIf="customerForm.get('lastName').errors?.maxlength">
               The last name must be less than 50 characters.
             </span>
           </span>
         </div>
       </div>
 
+      <div formGroupName="emailGroup" >
+          <div class="form-group row mb-2">
+              <label class="col-md-2 col-form-label"
+                     for="emailId">Email</label>
+              <div class="col-md-8">
+                <input class="form-control"
+                       id="emailId"
+                       type="email"
+                       placeholder="Email (required)"
+                       formControlName="email"
+                       [ngClass]="{'is-invalid': emailMessage }" />
+                <span class="invalid-feedback">
+                  {{ emailMessage }}
+                </span>
+              </div>
+            </div>
+
+            <div class="form-group row mb-2">
+                <label class="col-md-2 col-form-label"
+                       for="confirmedEmailId">Confirm Email</label>
+                <div class="col-md-8">
+                  <input class="form-control"
+                         id="confirmedEmailId"
+                         type="email"
+                         placeholder="Confirmed email (required)"
+                         formControlName="confirmedEmail"
+                         [ngClass]="{'is-invalid': customerForm.get('emailGroup').errors ||
+                         ((customerForm.get('emailGroup.confirmedEmail').touched ||
+                         customerForm.get('emailGroup.confirmedEmail').dirty) &&
+                         !customerForm.get('emailGroup.confirmedEmail').valid )}" />
+                  <span class="invalid-feedback">
+                    <span *ngIf="customerForm.get('emailGroup.confirmedEmail').errors?.required">
+                      Please enter your confirmed email address.
+                    </span>
+                    <span *ngIf="customerForm.get('emailGroup').errors?.match">
+                        Confirmation email needs to match email given!
+                    </span>
+                  </span>
+                </div>
+            </div>
+      </div>
+
       <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label"
-               for="emailId">Email</label>
+               for="phoneId">Phone</label>
         <div class="col-md-8">
           <input class="form-control"
-                 id="emailId"
-                 type="email"
-                 placeholder="Email (required)"
-                 required
-                 email
-                 [(ngModel)]="customer.email"
-                 name="email"
-                 #emailVar="ngModel"
-                 [ngClass]="{'is-invalid': (emailVar.touched || emailVar.dirty) && !emailVar.valid }" />
+                 id="phoneId"
+                 type="tel"
+                 placeholder="Phone"
+                 formControlName="phone"
+                 [ngClass]="{'is-invalid': !customerForm.get('phone').valid }" />
           <span class="invalid-feedback">
-            <span *ngIf="emailVar.errors?.required">
-              Please enter your email address.
-            </span>
-            <span *ngIf="emailVar.errors?.email">
-              Please enter a valid email address.
+            <span *ngIf="customerForm.get('phone').errors?.required">
+              Please enter your phone number.
             </span>
           </span>
         </div>
       </div>
 
       <div class="form-group row mb-2">
+        <label class="col-md-2 col-form-label pt-0">Send Notifications</label>
         <div class="col-md-8">
-          <div class="form-check">
-            <label class="form-check-label">
-              <input class="form-check-input"
-                     id="sendCatalogId"
-                     type="checkbox"
-                     [(ngModel)]="customer.sendCatalog"
-                     name="sendCatalog"> Send me your catalog
+          <div class="form-check form-check-inline">
+              <label class="form-check-label">
+                  <input class="form-check-input"
+                  type="radio"
+                  value="email"
+                  formControlName="notification" />
+                  Email
+              </label>
+          </div>
+          <div class="form-check form-check-inline">
+              <label class="form-check-label">
+                  <input class="form-check-input"
+                  type="radio"
+                  value="text"
+                  formControlName="notification" />
+                  Text
+              </label>
+          </div>
+      </div>
+      </div>
+
+      <div class="form-group row mb-2">
+          <label class="col-md-2 col-form-label"
+                 for="ratingId">Rating</label>
+          <div class="col-md-8">
+            <input class="form-control"
+                   id="ratingId"
+                   type="number"
+                   placeholder="Rate Us!"
+                   formControlName="rating"
+                   [ngClass]="{'is-invalid': (customerForm.get('rating').touched || customerForm.get('rating').dirty) && !customerForm.get('rating').valid }" />
+            <span class="invalid-feedback">
+              <span *ngIf="customerForm.get('rating').errors?.range">
+                Please enter a valid email address.
+              </span>
+            </span>
+          </div>
+        </div>
+
+        <div class="form-group row mb-2">
+            <div class="col-md-8">
+              <div class="form-check">
+                <label class="form-check-label">
+                <input class="form-check-input"
+                      id="sendCatalogId"
+                      type="checkbox"
+                      formControlName="sendCatalog">Send me your catalog
             </label>
           </div>
         </div>
       </div>
 
-      <div *ngIf="customer.sendCatalog">
+      <div *ngIf="customerForm.get('sendCatalog').value">
         <div class="form-group row mb-2">
           <label class="col-md-2 col-form-label pt-0">Address Type</label>
           <div class="col-md-8">
@@ -107,8 +176,7 @@
                        id="addressType1Id"
                        type="radio"
                        value="home"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Home
+                       formControlName="addressType"> Home
               </label>
             </div>
             <div class="form-check form-check-inline">
@@ -117,8 +185,7 @@
                        id="addressType1Id"
                        type="radio"
                        value="work"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Work
+                       formControlName="addressType"> Work
               </label>
             </div>
             <div class="form-check form-check-inline">
@@ -127,8 +194,7 @@
                        id="addressType1Id"
                        type="radio"
                        value="other"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Other
+                       formControlName="addressType"> Other
               </label>
             </div>
           </div>
@@ -142,8 +208,7 @@
                    id="street1Id"
                    type="text"
                    placeholder="Street address"
-                   [(ngModel)]="customer.street1"
-                   name="street1">
+                   formControlName="street1">
           </div>
         </div>
 
@@ -155,8 +220,7 @@
                    id="street2Id"
                    type="text"
                    placeholder="Street address (second line)"
-                   [(ngModel)]="customer.street2"
-                   name="street2">
+                   formControlName="street2">
           </div>
         </div>
 
@@ -168,14 +232,12 @@
                    id="cityId"
                    type="text"
                    placeholder="City"
-                   [(ngModel)]="customer.city"
-                   name="city">
+                   formControlName="city">
           </div>
           <div class="col-md-3">
             <select class="form-control"
                     id="stateId"
-                    [(ngModel)]="customer.state"
-                    name="state">
+                    formControlName="state">
               <option value=""
                       disabled
                       selected
@@ -195,8 +257,7 @@
                    id="zipId"
                    type="number"
                    placeholder="Zip Code"
-                   [(ngModel)]="customer.zip"
-                   name="zip">
+                   formControlName="zip">
           </div>
         </div>
       </div>
@@ -206,16 +267,23 @@
           <button class="btn btn-primary mr-3"
                   type="submit"
                   style="width:80px"
-                  [title]="signupForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
-                  [disabled]="!signupForm.valid">
+                  [title]="customerForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
+                  [disabled]="!customerForm.valid">
             Save
+          </button>
+          <button class="btn btn-outline-secondary"
+          type="button"
+          style="width:100px"
+          (click)="populateTestData()"
+          >
+            Test Data
           </button>
         </div>
       </div>
     </form>
   </div>
 </div>
-<br>Dirty: {{ signupForm.dirty }}
-<br>Touched: {{ signupForm.touched }}
-<br>Valid: {{ signupForm.valid }}
-<br>Value: {{ signupForm.value | json }}
+<br>Dirty: {{ customerForm.dirty }}
+<br>Touched: {{ customerForm.touched }}
+<br>Valid: {{ customerForm.valid }}
+<br>Value: {{ customerForm.value | json }}
